--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,5 +1,9 @@
 /* 기존 CSS 스타일 유지 */
 /* index.css */
+main{
+	font-family: 'GmarketSansMedium', Arial, sans-serif;
+}
+
 
 /* a 링크 */
     a { text-decoration: none; color: black; }
@@ -27,27 +31,23 @@
 	margin-top: 15px;
 	margin-bottom: 15px;
 	height: 40px;
-	padding: 10px 15px;
-	background-color: #f9f9f9;
+	background-color: white;
 	border-width: 1px; /* 변경된 부분: 1px로 설정 */
-	border-color: #dedede;
-	border-style: solid; /* 추가된 부분: solid로 명시적 설정 */
-	border-radius: 25px;
-	cursor: pointer;
-}
-
-.category--btn:hover,
-.genre--btn:hover,
-.day--btn:hover {
-	border-color: #FF4D6D; /* 변경된 부분 */
-	transition: background-color 0.3s ease;
+     border: 1px solid #ddd;
+    border-radius: 3px;
+    padding: 0 15px;
+    cursor: pointer;
+    color: #000 !important;
+    font-weight: 600;
+   font-family: 'GmarketSansMedium', Arial, sans-serif;
 }
 
 .category--btn.active,
 .genre--btn.active,
 .day--btn.active {
-	background-color: #FFF9D8;
-	color: #444;
+	background-color: #f06292;
+	color: white!important;
+		font-family: 'GmarketSansMedium', Arial, sans-serif;
 }
 
 
@@ -83,11 +83,12 @@
     width: 80px;
     height: 40px;
     border: none;
-    color: black;
+    color: black;;
     border-radius: 5px;
     cursor: pointer;
     background-color: transparent; /* 기본 버튼 배경 투명 */
     transition: color 0.3s ease;
+    	font-family: 'GmarketSansMedium', Arial, sans-serif;
 }
 .btn--area--category::before,
 .btn--area--genre::before,
@@ -96,7 +97,7 @@
     position: absolute;
     width: 70px;
     height: 40px;
-    background-color: black;  /* 선택된 버튼 색상 */
+    background-color: #f06292;  /* 선택된 버튼 색상 */
     border-radius: 25px;
     transition: transform 0.5s ease, width 0.5s ease;
     z-index: 0; /* 배경은 버튼 아래 */
@@ -135,23 +136,18 @@ h3 {
 }
 
 .book--list--1, .book--list--2, .book--list--3 {
-	display: flex;
-	flex-wrap: wrap;
-	width:1200px;
-	gap: 20px;
-	margin-left: 100px;
-	margin-bottom: 100px;
-	justify-content: flex-start; /* 책 목록 중앙 정렬 */
+        max-width: 1200px;
+        width:1200px;
+        margin: 0 auto;
+        display: grid;
+        grid-auto-flow: column;
+        grid-template-rows: repeat(3, 1fr);
+        grid-gap: 1px 25px;
+        justify-content: start;
 }
 
 .book--item {
-	width: 150px;
-	height: 250px;
-	text-align: center;
-	padding: 25px;
-	border-radius: 8px;
-	background-color: #f9f9f9;
-	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+	width:400px;
 	transition: transform 0.3s ease, box-shadow 0.3s ease;
 	    cursor: pointer; 
 }
@@ -165,16 +161,10 @@ h3 {
 /* 너비가 556px 이상일 때 마진 적용 */
 @media (min-width: 556px) {
   .book--item {
-    margin: 100px auto; /* 큰 화면에서의 마진 설정 */
+    margin: 1px auto; /* 큰 화면에서의 마진 설정 */
   }
 }
 
-
-.book--item:hover, .book--item--funding:hover {
-	background-color: #FFF9D8;
-	transition: transform 0.3s ease, box-shadow 0.3s ease;
-	transform: scale(1.05);  /* 마우스를 올렸을 때 살짝 확대되게 처리 */
-}
 
 .book--item--funding {
 	width: 300px;
@@ -187,10 +177,6 @@ h3 {
 	transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.book--item:hover {
-	transform: translateY(-5px); /* 마우스 오버 시 위로 살짝 이동 */
-	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-}
 
 .book--item--funding:hover {
 	transform: translateY(-5px); /* 마우스 오버 시 위로 살짝 이동 */
@@ -198,9 +184,10 @@ h3 {
 }
 
 .book--item img {
-	width: 100%;
-	height: auto;
+	width: 120px;
+	height: 130px;
 	border-radius: 5px;
+	object-fit: cover; /* 이미지 비율 유지 */
 }
 
 .book--item--funding img {
@@ -210,34 +197,71 @@ h3 {
 }
 
 .book--info {
-	margin-top: 10px;
+            display: flex;
+            align-items: center;
+            padding: 10px;
+            width: 380px; /* 전체 배너의 너비를 제한 */
+            margin: 10px;
+            background-color: white;
 }
 
 .book--info--funding {
 	margin-top: 10px;
 }
 
-.book--info h4 {
-	font-size: 14px;
-	margin: 3px 0;
-}
 
 .book--info--funding h4 {
 	font-size: 14px;
 	margin: 3px 0;
 }
 
-.book--info p {
-	font-size: 14px;
-	color: #666;
-}
-
 .book--info--funding p {
 	font-size: 14px;
 	color: #666;
 }
-
-
+.book--text{
+	display:flex;
+ 	margin-left: 20px;
+   	max-width: 250px; /* 텍스트 영역의 최대 너비를 설정 */
+   	white-space: normal; /* 텍스트 줄바꿈 허용 */
+   	gap:10px;
+}
+.text--number{
+    font-size: 24px;
+   line-height: 24px;
+   font-weight: 600;
+   margin-top: 15px;
+}
+.text--title{
+	        font-size: 16px;
+        font-weight: 600;
+        margin-bottom: 5px;
+        overflow: hidden;
+        white-space: normal;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
+        word-break: keep-all;
+        max-width: 270px;
+}
+.text--writer{
+	        color: #888;
+        font-size: 14px;
+        margin-bottom: 15px;
+        margin-top: 2px;
+}
+.text--view{
+	    color: #2B6FE6;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        font-size:.875rem;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        word-wrap: break-word;
+        -webkit-box-orient: vertical;
+        margin: 0;
+}
 /* swiper 라이브러리*/
 .swiper-container {
     width: 70%; /* 전체 화면 너비 */
@@ -264,8 +288,8 @@ h3 {
 :root {
     --swiper-pagination-bullet-width: 20px;
     --swiper-pagination-bullet-height: 20px;
-    --swiper-pagination-bullet-active: red;
-    --swiper-pagination-color: #ff0047ed; /* 활성화된 페이지네이션 색상 */
+    --swiper-pagination-bullet-active: #f06292;;
+    --swiper-pagination-color: #f06292; /* 활성화된 페이지네이션 색상 */
     --swiper-theme-color: blue; /* 기본 테마 색상 (필요한 경우) */
     --swiper-pagination-bottom: 15%; /* 원하는 값으로 변경 */
 }
@@ -288,7 +312,7 @@ h3 {
 }
 
 .swiper-pagination-bullet-active {
-    background: #ff0047ed;
+    background: #f06292;;
 }
 
 /* 기본적으로 모든 이미지와 텍스트 숨기기 */
@@ -307,11 +331,17 @@ h3 {
     cursor: pointer
 }
 /* 왼쪽/오른쪽 네비게이션 버튼의 위치 조정 */
-.swiper-button-next, .swiper-button-prev {
+.banner-swiper-button-prev, .banner-swiper-button-next  {
     top: 50%; /* 버튼의 수직 위치 */
     transform: translateY(-50%); /* 가운데 정렬 */
     width: 30px; /* 버튼 너비 (원하는 크기로 변경 가능) */
     height: 30px; /* 버튼 높이 (원하는 크기로 변경 가능) */
+}
+.book-swiper-button-prev, .book-swiper-button-next  {
+    top: 30%; /* 버튼의 수직 위치 */
+    transform: translateY(-80%); /* 가운데 정렬 */
+    width: 30px; /* 버튼 너비 (원하는 크기로 변경 가능) */
+    height: 500px; /* 버튼 높이 (원하는 크기로 변경 가능) */
 }
 
 .swiper-button-next {
@@ -333,4 +363,39 @@ h3 {
     color: black!important;
 }
 
+/* 배너 Swiper 버튼 */
 
+.banner-swiper-button-prev {
+    left: 10px;
+}
+
+.banner-swiper-button-next {
+    right: 10px;
+}
+
+
+.book-swiper-button-prev {
+    left: 10px;
+}
+
+.book-swiper-button-next {
+    right: 200px !important;
+}
+
+.book--cover{
+	position: relative;
+}
+.age--mark{
+	background-color: rgba(255, 0, 0, 0.9); 
+	display:flex;
+	position: absolute !important;
+	font-size:12px;
+    top: 5px !important;
+    right: 5px !important;
+    width: 20px !important;
+    height: 20px !important;
+    border-radius: 10px;
+    align-items: center; 
+    justify-content: center; 
+    line-height: 15px; /* 높이와 동일하게 설정하여 수직 중앙 정렬 */
+}
