--- a/src/main/resources/static/css/workList.css
+++ b/src/main/resources/static/css/workList.css
@@ -8,13 +8,7 @@ body {
     padding: 0;
 }
 
-.banner--content img {
-    width: 100%; /* 부모 요소에 맞춤 */
-    max-width: 1200px; /* 최대 너비 제한 */
-    height: auto; /* 비율 유지 */
-    display: block; /* 부모 요소의 너비를 가득 채우도록 설정 */
-    margin: 0 auto;
-}
+
 
 .href--btn {
     height: 30px;
@@ -250,23 +244,82 @@ body {
     display: inline-block;
     margin: 0 10px;
     padding: 8px 8px;
-    background-color: #007bff; /* 기본 배경색 */
-    color: white; /* 글자 색 */
+    background-color: #007bff; 
+    color: white; 
     text-decoration: none;
-    border-radius: 5px; /* 모서리 둥글게 */
-    transition: background-color 0.3s ease; /* 호버 시 부드러운 색 전환 효과 */
+    border-radius: 5px; 
+    transition: background-color 0.3s ease; 
 }
 
 .page-link:hover {
-    background-color: #0056b3; /* 호버 시 배경색 변경 */
+    background-color: #0056b3; 
 }
 
 .page-link[onclick="return false;"] {
-    background-color: #cccccc; /* 비활성화된 버튼의 배경색 */
-    color: #666666; /* 비활성화된 버튼의 글자 색 */
-    cursor: not-allowed; /* 비활성화된 버튼의 마우스 포인터 */
+    background-color: #cccccc; 
+    color: #666666; 
+    cursor: not-allowed; 
 }
 .page-link.next {
-    margin-left: auto; /* 항상 오른쪽 끝에 위치 */
+    margin-left: auto; 
 }
 
+
+/* 수정부 */
+
+
+
+
+/* 하트 */
+.likes-container {
+    margin-left: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.likes--shap {
+    width: 15px;
+    height: 15px;
+    margin-right: 5px;
+}
+
+.likes--shap svg {
+    width: 100%;
+    height: 100%;
+}
+
+.likes--shap svg path {
+    stroke: black;
+    stroke-width: 2px;
+    fill: none;
+}
+
+
+/* 별 */
+
+.star-rating {
+    display: flex;
+    align-items: center;
+    margin-left: 15px;
+}
+
+.star {
+    width: 15px; 
+    height: 15px;
+    margin-right: 5px;
+}
+
+.star svg {
+    width: 100%;
+    height: 100%;
+}
+
+.star svg .filled {
+    fill: gold; 
+}
+
+.star svg .empty {
+    stroke: black; 
+    stroke-width: 2px;
+    fill: none; 
+}
