--- a/src/main/resources/static/css/chat/chat.css
+++ b/src/main/resources/static/css/chat/chat.css
@@ -3,7 +3,7 @@
   
 body {
     font-family: Arial, sans-serif;
-    background-color: pink;
+    background-color: white;
     margin: 0;
     padding: 0;
     display: flex;
