--- a/src/main/resources/static/css/sidebar.css
+++ b/src/main/resources/static/css/sidebar.css
@@ -3,12 +3,14 @@
 
 .sidebar {
   font-family: 'Nunito', sans-serif;
+  display: flex;
+  justify-content: center;
   position: fixed;
   top: 0;
-  right: -450px; 
-  width: 450px;
+  right: -350px; 
+  width: 350px;
   height: 100%;
-  background-color: #f8f9fa;
+  background-color: rgba(255, 118, 118, 0.73);
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
   transition: right 0.3s ease;
   z-index: 1000;
@@ -26,13 +28,14 @@
 }
 
 .sidebar ul li {
-  padding: 10px 0;
-  border-bottom: 1px solid #ddd;
+  padding: 15px 0;
+  margin-bottom: 15px;
+  
 }
 
 .sidebar ul li a {
   text-decoration: none;
-  color: #333;
+  color: #ffffff;
   font-weight: bold;
   
 }
@@ -46,10 +49,38 @@
   text-decoration: none;
   color: black;
 }
+.pencil-icon{
+  margin-bottom: 50px;
+}
 
 .nav-profile img {
   width: 30px;
   height: 30px;
   border-radius: 50%;
   margin-right: 10px;
+}
+
+.logout{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  background-color: red;
+  margin-top: 150px;
+  font-weight: bolder;
+  color: white;
+  border-radius: 5px;
+}
+
+.num{
+  display: flex;
+background-color: #ffffff;
+border-radius: 5px;
+height: 25px;
+width: 200px;
+justify-content: center;
+align-items: center;
+color: black;
+font-size: 12px;
+border:  solid 3  px #fb4141;
 }
