--- a/src/main/resources/static/css/layout/header.css
+++ b/src/main/resources/static/css/layout/header.css
@@ -222,11 +222,12 @@ search-form {
     align-items: center;      /* 이미지와 텍스트를 수직 정렬 */
     cursor: pointer;          /* 클릭 가능하도록 포인터 커서 */
     border-bottom: 1px solid #eaeaea; /* 항목 구분선 */
+    font-size: 16px;
 }
 
 #searchResults li img {
-    width: 50px;              /* 책 표지 이미지 너비 설정 */
-    height: 75px;             /* 책 표지 이미지 높이 설정 */
+    width: 75px;              /* 책 표지 이미지 너비 설정 */
+    height: 100px;             /* 책 표지 이미지 높이 설정 */
     margin-right: 10px;       /* 이미지와 텍스트 간격 설정 */
 }
 
