funding- book 연결

--- a/src/main/resources/static/css/workList.css
+++ b/src/main/resources/static/css/workList.css
@@ -7,7 +7,14 @@ body {
     margin: 0;
     padding: 0;
 }
-
+.funding-btn{
+    margin-left: 10px;
+    background-color: #f06292;
+    border-radius: 5px;
+}
+.funding-btn a{
+    color: white;
+}
 
 
 .href--btn {
